Make invalidateFramebuffer no-op for DEPTH_STENCIL attachment

Due to potential performance issues chrome should just make
invalidateFramebuffer call a no-op if the attachment is in
DEPTH_STENCIL format and only one part is intended to be
invalidated.

BUG=628496
TEST=deqp/functional/gles3/fboinvalidate/whole.html?webglVersion=2&quiet=0

CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2149523002
Cr-Commit-Position: refs/heads/master@{#406821}

Former-commit-id: ce7e217303925cfec9b453ff745e9ebb5f120d95