gpu/command_buffer/service/framebuffer_manager.h
@@ -87,6 +87,7 @@ class GPU_EXPORT Framebuffer : public base::RefCounted<Framebuffer> {
   bool HasUnclearedColorAttachments() const;
 
   bool HasSRGBAttachments() const;
+  bool HasDepthStencilFormatAttachment(GLenum attachment) const;
 
   void ClearUnclearedIntOr3DTexturesOrPartiallyClearedTextures(
       GLES2Decoder* decoder,
